# ms2go

./: .gitignore  Dockerfile  README.md  combine_protein.py  docker-compose.yml  get_uniprot.py  gostats.py  main.py  msstats.py  pyproject.toml  reformatMS_darwin_amd64  reformatMS_linux_amd64  requirements.txt  settings.py
MSstats/: DESCRIPTION  INDEX
MSstats/Meta/: .Rapp.history  Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds  vignette.rds
MSstats/R/: MSstats.rdb  MSstats.rdx
MSstats/data/: Rdata.rdb  Rdata.rds  Rdata.rdx
MSstats/help/: AnIndex  MSstats.rdb  MSstats.rdx
MSstats/html/: 00Index.html
data/_BHG_vs_BCG/: (1)BHGvs(-1)BCGdecrease.txt.R  (1)BHGvs(-1)BCGincrease.txt.R  reformated.csv.R
data/_BHLG_vs_BCLG/: (1)BHLGvs(-1)BCLGdecrease.txt.R  (1)BHLGvs(-1)BCLGincrease.txt.R  reformated.csv.R
data/_FGH_vs_FCG/: (1)FGHvs(-1)FCGdecrease.txt.R  (1)FGHvs(-1)FCGincrease.txt.R  reformated.csv.R
data/_LHG_vs_LCG/: (1)LHGvs(-1)LCGdecrease.txt.R  (1)LHGvs(-1)LCGincrease.txt.R  reformated.csv.R
data/_LHLG_vs_LCLG/: (1)LHLGvs(-1)LCLGdecrease.txt.R  (1)LHLGvs(-1)LCLGincrease.txt.R  reformated.csv.R
data/_LTHG_vs_LTCG/: (1)LTHGvs(-1)LTCGdecrease.txt.R  (1)LTHGvs(-1)LTCGincrease.txt.R  reformated.csv.R
data/_LTHLG_vs_LTCLG/: (1)LTHLGvs(-1)LTCLGdecrease.txt.R  (1)LTHLGvs(-1)LTCLGincrease.txt.R  reformated.csv.R
data/_MBHG_vs_MBCG/: (1)MBHGvs(-1)MBCGdecrease.txt.R  (1)MBHGvs(-1)MBCGincrease.txt.R  reformated.csv.R
data/_MBHLG_vs_MBCLG/: (1)MBHLGvs(-1)MBCLGdecrease.txt.R  (1)MBHLGvs(-1)MBCLGincrease.txt.R  reformated.csv.R
(+31 files in other folders)
